# rs-filewatch-trigger

./: .env-build  .travis.yml  Cargo.toml  Dockerfile  Dockerfile-lint-test  README.md  appveyor.yml  docker-compose.build.yml  docker-compose.lint-test.yml
src/: args.rs  main.rs  watchers.rs
src/actions/: cmd.rs  mod.rs
src/actions/base/: mod.rs
src/types/: event_type.rs  glob_matcher.rs  mod.rs  path_event.rs
