[package]
name = "rs-filewatch-trigger"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "FileWatch Trigger to run various actions"
repository = "https://github.com/guangie88/rs-filewatch-trigger"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"

[badges]
travis-ci = { repository = "guangie88/rs-filewatch-trigger" }
codecov = { repository = "guangie88/rs-filewatch-trigger" }

[dependencies]
bitflags = "1.0.4"
failure = "0.1.2"
globset = "0.4.1"
maplit = "1.0.1"
notify = "4.0.4"
serde = "1.0.75"
serde_derive = "1.0.75"
strfmt = "0.1.6"
structopt = "0.2.10"
structopt-derive = "0.2.10"
vlog = "0.1.4"
path-absolutize = "1.1.0"

[[bin]]
name = "fwt"
path = "src/main.rs"
