[package]
name = "rs-filewatch-trigger"
version = "0.2.1"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "FileWatch Trigger to run various actions"
repository = "https://github.com/guangie88/rs-filewatch-trigger"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"

[badges]
travis-ci = { repository = "guangie88/rs-filewatch-trigger" }
codecov = { repository = "guangie88/rs-filewatch-trigger" }

[dependencies]
bitflags = "1.0.4"
failure = "0.1.2"
globset = "0.4.2"
maplit = "1.0.1"
notify = "4.0.6"
serde = "1.0.79"
serde_derive = "1.0.79"
strfmt = "0.1.6"
structopt = "0.2.10"
structopt-derive = "0.2.10"
vlog = "0.1.4"
path-absolutize = "1.1.1"
signal-hook = "0.1.5"

[[bin]]
name = "fwt"
path = "src/main.rs"
